Mise en place partiel du tempalte graphique partie 3

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,15 +8,18 @@
     {% include ':default:import_css.html.twig'%}
 
 </head>
-<body>
+
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
+
         {% include ':default:head.html.twig'%}
         {% include ':default:aside.html.twig'%}
-        {% include ':default:contentwrap.html.twig'%}
-
 
     {% block body %}{% endblock %}
-{% block javascripts %}{% endblock %}
+
+    {% include ':default:footer.html.twig'%}
+    {% include ':default:csidebar.html.twig'%}
+
+{% block javascripts %}{% include ':default:js.html.twig'%}{% endblock %}
 </body>
 </html>
