--- a/app/Resources/views/default/import_css.html.twig
+++ b/app/Resources/views/default/import_css.html.twig
@@ -1,5 +1,6 @@
 <!-- Bootstrap 3.3.5 -->
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ asset('bundles/siteglobale/bootstrap/css/bootstrap.min.css') }}" type="text/css" />
+
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <!-- Ionicons -->
@@ -23,6 +24,6 @@
 <!-- Daterange picker -->
 
 <link rel="stylesheet" href="{{ asset('bundles/siteglobale/plugins/datepicker/datepicker3.css') }}" type="text/css" />
-<!-- bootstrap wysihtml5 - text editor --
+<!-- bootstrap wysihtml5 - text editor -->
 <link rel="stylesheet" href="{{ asset('bundles/siteglobale/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css') }}" type="text/css" />
 
