Mise en place de la partie js et correction de bug divers

--- a/app/Resources/views/default/js.html.twig
+++ b/app/Resources/views/default/js.html.twig
@@ -1,5 +1,5 @@
 <!-- jQuery 2.1.4 -->
-<script src="plugins/jQuery/jQuery-2.1.4.min.js"></script>
+<script src="{{ asset('bundles/siteglobale/plugins/jQuery/jQuery-2.1.4.min.js') }}"></script>
 <!-- jQuery UI 1.11.4 -->
 <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
