--- a/app/Resources/views/default/contentwrap.html.twig
+++ b/app/Resources/views/default/contentwrap.html.twig
@@ -138,7 +138,7 @@
                         </div><!-- /.item -->
                         <!-- chat item -->
                         <div class="item">
-                            <img src="dist/img/user2-160x160.jpg" alt="user image" class="offline">
+                            <img src="{{asset('bundles/siteglobale/dist/img/user2-160x160.jpg')}}" alt="user image" class="offline">
                             <p class="message">
                                 <a href="#" class="name">
                                     <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
@@ -436,4 +436,4 @@
         </div><!-- /.row (main row) -->
 
     </section><!-- /.content -->
-    <
+   
