--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -4,7 +4,9 @@ liste members
 {{ members |length }}
 {% for member in members  %}
    <p>{{ member.firstname }} {{  member.lastname }}</p>
+    <p>{{ member.phonenumber.tel }} </p>
 
+    <p>{{ member.email.email }} </p>
 {% endfor %}
 
 </html>
