mise a jour du style

--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -1,12 +1,108 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>{% block title %}Administration{% endblock %}</title>
+        {% block stylesheets %}
+            
+            <!-- Bootstrap 3.3.5 -->
+            <link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/bootstrap/css/bootstrap.min.css') }}" type="text/css" />
 
-liste members
-{{ members |length }}
-{% for member in members  %}
-   <p>{{ member.firstname }} {{  member.lastname }}</p>
-    <p>{{ member.phonenumber.tel }} </p>
+            <!-- Font Awesome -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <p>{{ member.email.email }} </p>
-{% endfor %}
+            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+            <link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/css/CardMembers.css') }}" type="text/css" />
+            <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+        {% endblock %}
+    </head>
+
+    <body class="hold-transition skin-blue sidebar-mini">
+        <div class="wrapper">
+
+        {% block body %}
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#" onclick="auth();">Voir les Membres</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Nav header</li>
+                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">One more separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="./">Default <span class="sr-only">(current)</span></a></li>
+                    <li><a href="../navbar-static-top/">Static top</a></li>
+                    <li><a href="../navbar-fixed-top/">Fixed top</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
+        </div>
+        <!--/.container-fluid -->
+    </nav>
+        <div class="container">
+        
+                <div id="carnet" class="row">
+
+                    <!--{{ members |length }}-->
+                    {% for member in members  %}
+
+                        <div class="card col-md-3">
+                            <div class="front ">                               
+                                <div class="cover">
+                                    <img class="img-responsive"  src="{{ asset('bundles/kazanacmembre/img/cover.jpg') }}">                                                  
+                                </div>
+                                <div class="user">
+                                    <img class="img-responsive img-circle" src="{{ asset('bundles/kazanacmembre/img/inconnu.jpg') }}">  
+                                </div>           
+                                <div class="coordonnee">
+                                        <hr class="hrCoordonnee">
+                                        <p class="nameMember"> {{ member.firstname }} {{  member.lastname }}</p>
+                                        <hr  class="hrCoordonnee">                
+                                        <p> <i class="fa fa-phone" aria-hidden="true"></i>{{ member.phonenumber.tel }}</p>
+                                        <p> <i class="fa fa-envelope" aria-hidden="true"></i>{{ member.email.email }}</p>  
+                                </div>
+                            </div>
+                        </div>
+                        
+                    {% endfor %}
+                </div>
+            </div>  
+
+
+  <footer>
+        <div class="jumbotron">            
+            <p class="text-center">&copy; Association KAZANAC </p>
+            <p class="text-right">Web Master : JEAN-LOUIS Stévie / BEBEL Jean-Raynal </p>            
+        </div>
+    </footer>
+        {% endblock body %}
+
+
+        {% block javascripts %}
+            {% include 'KazanacMembreBundle:fragment:js.html.twig' %}
+        {% endblock javascripts %}
+    </body>
 
 </html>
