insert item for members

--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -34,6 +34,15 @@
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                 </ul>
             </li>
+            <li class="active treeview">
+                <a href="#">
+                    <i class="fa fa-dashboard"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Recherche membres</a></li>
+                      </ul>
+            </li>
             <li class="treeview">
                 <a href="#">
                     <i class="fa fa-files-o"></i>
