--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -40,8 +40,13 @@
                 </a>
                 <ul class="treeview-menu">
                     <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Recherche membres</a></li>
-                      </ul>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Creer un membres</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Modifier un membres</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Supprimer un membre</a></li>
+
+                </ul>
             </li>
             <li class="treeview">
                 <a href="#">
