suite mise a jour item

--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -36,16 +36,36 @@
             </li>
             <li class="active treeview">
                 <a href="#">
+                    <i class="fa fa-dashboard"></i> <span>Administration</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="index.html"><i class="fa fa-circle-o"></i> Documents sur l'association</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                </ul>
+            </li>
+            <li class="active treeview">
+                <a href="#">
+                    <i class="fa fa-dashboard"></i> <span>Vie de l'association</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="index.html"><i class="fa fa-circle-o"></i>Compte rendu de réunion</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i>Les bourses</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i>Les expositions</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i>Les sorties</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i>Les réalisations</a></li>
+                </ul>
+            </li>
+            <li class="active treeview">
+                <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
+                    <li><a href="/listMembre"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Creer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Modifier un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Supprimer un membre</a></li>
-
                 </ul>
             </li>
             <li class="treeview">
