--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -62,7 +62,7 @@
                 <ul class="treeview-menu">
                     <li><a href="/listMembre"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Creer un membres</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Modifier un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Supprimer un membre</a></li>
