--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -69,6 +69,15 @@
             </li>
             <li class="treeview">
                 <a href="#">
+                    <i class="fa fa-dashboard"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="/listMembre"><i class="fa fa-circle-o"></i> Présences</a></li>
+                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Nombre de réunion</a></li>
+                </ul>
+            </li>
+            <!--li class="treeview">
+                <a href="#">
                     <i class="fa fa-files-o"></i>
                     <span>Layout Options</span>
                     <span class="label label-primary pull-right">4</span>
@@ -85,7 +94,7 @@
                     <i class="fa fa-th"></i> <span>Widgets</span> <small class="label pull-right bg-green">new</small>
                 </a>
             </li>
-            <li class="treeview">
+            li class="treeview">
                 <a href="#">
                     <i class="fa fa-pie-chart"></i>
                     <span>Charts</span>
@@ -189,7 +198,7 @@
             <li class="header">LABELS</li>
             <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
             <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+            <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li-->
         </ul>
     </section>
     <!-- /.sidebar -->
