--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -24,7 +24,7 @@
         <!-- /.search form -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
+            <!--li class="header">MAIN NAVIGATION</li>
             <li class="active treeview">
                 <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span> <i class="fa fa-angle-left pull-right"></i>
@@ -33,7 +33,7 @@
                     <li class="active"><a href="index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
                 </ul>
-            </li>
+            </li-->
             <li class="treeview">
                 <a href="#">
                     <i class="fa fa-dashboard"></i> <span>Administration</span> <i class="fa fa-angle-left pull-right"></i>
@@ -59,7 +59,7 @@
                     <i class="fa fa-dashboard"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="/listMembre"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
+                    <li><a href="{{ path('listMembre') }}"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
