--- a/src/Kazanac/MembreBundle/Resources/views/fragment/contentwrap.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/contentwrap.html.twig
@@ -34,12 +34,12 @@
                 <div class="small-box bg-green">
                     <div class="inner">
                         <h3>53<sup style="font-size: 20px">%</sup></h3>
-                        <p>Bounce Rate</p>
+                        <p>Présence</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="#" class="small-box-footer">Plus d'informations<i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div><!-- ./col -->
             <div class="col-lg-3 col-xs-6">
@@ -47,12 +47,12 @@
                 <div class="small-box bg-yellow">
                     <div class="inner">
                         <h3>44</h3>
-                        <p>User Registrations</p>
+                        <p>Nombre de membres</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="#" class="small-box-footer">Plus d'informations <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div><!-- ./col -->
             <div class="col-lg-3 col-xs-6">
