--- a/src/Kazanac/MembreBundle/Resources/views/base.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/base.html.twig
@@ -15,7 +15,13 @@
         {% include 'KazanacMembreBundle:fragment:head.html.twig'%}
         {% include 'KazanacMembreBundle:fragment:aside.html.twig'%}
 
-    {% block body %}{% endblock %}
+    {% block body %}
+    
+    
+    
+    
+    
+    {% endblock %}
 
     {% include 'KazanacMembreBundle:fragment:footer.html.twig'%}
     {% include 'KazanacMembreBundle:fragment:csidebar.html.twig'%}
