--- a/src/Kazanac/MembreBundle/Resources/public/css/CardMembers.css
+++ b/src/Kazanac/MembreBundle/Resources/public/css/CardMembers.css
@@ -3,8 +3,8 @@
 }
 
 .front{
-       margin-bottom: 17px;
-       
+    margin-bottom: 17px;
+    background: whitesmoke;
     box-shadow: 0px 6px 21px 1px lightgrey;
 }
 
