--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -33,6 +33,8 @@
         {% include 'KazanacMembreBundle:fragment:aside.html.twig'%}
 
     {% block body %}
+    <section class="content-wrapper">
+         <div class="container">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -73,8 +75,6 @@
         </div>
         <!--/.container-fluid -->
     </nav>
-        <div class="container">
-        
                 <div id="carnet" class="row">
 
                     <!--{{ members |length }}-->
@@ -116,6 +116,8 @@
             <p class="text-right">Web Master : JEAN-LOUIS Stévie / BEBEL Jean-Raynal </p>            
         </div>
     </footer>
+    </section>
+   
         {% endblock %}
 
     {% include 'KazanacMembreBundle:fragment:footer.html.twig'%}
