retriat user panel aside and retrait puce header menu list membres

--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -50,11 +50,11 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ path('listMembre') }}" onclick="auth();">Trombinoscope</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Modifier un membres</a></li>
-                    <li><a href="index2.html"><i class="fa fa-circle-o"></i> Supprimer un membre</a></li>
+                    <li><a href="index2.html"> Rechercher un membre</a></li>
+                    <li><a href="index2.html"> Créer un membres</a></li>
+                    <li><a href="index2.html"> Ajouter un membre</a></li>
+                    <li><a href="index2.html"> Modifier un membres</a></li>
+                    <li><a href="index2.html"> Supprimer un membre</a></li>
                 </ul>                
             </div>
             <!--/.nav-collapse -->
