--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -3,7 +3,7 @@
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
         <!-- Sidebar user panel -->
-        <div class="user-panel">
+        <!--div class="user-panel">
             <div class="pull-left image">
                 <img src="{{ asset('bundles/kazanacmembre/dist/img/user2-160x160.jpg')}}" class="img-circle" alt="User Image">
             </div>
@@ -11,7 +11,7 @@
                 <p>Alexander Pierce</p>
                 <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
-        </div>
+        </div-->
         <!-- search form -->
         <form action="#" method="get" class="sidebar-form">
             <div class="input-group">
