mise a jour header taille lien trombinoscope aside

--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -59,7 +59,7 @@
                     <i class="fa fa-dashboard"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="{{ path('listMembre') }}"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
+                    <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
