--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -49,7 +49,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ path('listMembre') }}" onclick="auth();">Trombinoscope</a></li>
+                    <li><a href="{{ path('trombinoscope') }}" onclick="auth();">Trombinoscope</a></li>
                     <li><a href="index2.html"> Rechercher un membre</a></li>
                     <li><a href="index2.html"> Créer un membres</a></li>
                     <li><a href="index2.html"> Ajouter un membre</a></li>
