mise a jour des icone aside

--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -44,7 +44,7 @@
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-dashboard"></i> <span>Vie de l'association</span> <i class="fa fa-angle-left pull-right"></i>
+                    <i class="fa fa-globe"></i> <span>Vie de l'association</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="index.html"><i class="fa fa-circle-o"></i>Compte rendu de réunion</a></li>
@@ -56,10 +56,10 @@
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-dashboard"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
+                    <i class="fa fa-users"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
+                    <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-users"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
@@ -69,7 +69,7 @@
             </li>
             <li class="treeview">
                 <a href="#">
-                    <i class="fa fa-dashboard"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
+                    <i class="fa fa-pie-chart"></i> <span>Statistiques</span> <i class="fa fa-angle-left pull-right"></i>
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="/listMembre"><i class="fa fa-circle-o"></i> Présences</a></li>
