--- a/src/Kazanac/MembreBundle/Resources/views/fragment/import_css.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/import_css.html.twig
@@ -7,10 +7,10 @@
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
 <!-- Theme style -->
-<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/AdminLTE.min.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/AdminLTE.css') }}" type="text/css" />
 <!-- AdminLTE Skins. Choose a skin from the css/skins
      folder instead of downloading all of them to reduce the load. -->
-<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/AdminLTE.min.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/AdminLTE.css') }}" type="text/css" />
 
 <link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/skins/_all-skins.min.css') }}" type="text/css" />
 <!-- iCheck -->
