modif css all-skin.css a la place de la version minifier

--- a/src/Kazanac/MembreBundle/Resources/views/fragment/import_css.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/import_css.html.twig
@@ -12,7 +12,7 @@
      folder instead of downloading all of them to reduce the load. -->
 <link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/AdminLTE.css') }}" type="text/css" />
 
-<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/skins/_all-skins.min.css') }}" type="text/css" />
+<link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/dist/css/skins/_all-skins.css') }}" type="text/css" />
 <!-- iCheck -->
 <link rel="stylesheet" href="{{ asset('bundles/kazanacmembre/plugins/iCheck/flat/blue.css') }}" type="text/css" />
 <!-- Morris chart -->
