ajout du compteurs

--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -63,7 +63,7 @@
     </nav>
                 <div id="carnet" class="row">
 
-                    <!--{{ members |length }}-->
+                    <h1> Compteur : {{ members |length }}</h1>
                     {% for member in members  %}
 
                         <div class="card col-md-3">
