--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -57,6 +57,7 @@
             <li class="treeview">
                 <a href="#">
                     <i class="fa fa-users"></i> <span>Membres</span> <i class="fa fa-angle-left pull-right"></i>
+                    <span class="label label-success">{{ members |length }}</span>
                 </a>
                 <ul class="treeview-menu">
                     <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-users"></i> Trombinoscope</a></li>
