--- a/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Member/list_membre.html.twig
@@ -45,16 +45,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-                <a class="navbar-brand" href="#">Les membres</a>
+                <a class="navbar-brand" href="#"><strong>Les Membres</strong></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ path('trombinoscope') }}" onclick="auth();">Trombinoscope</a></li>
-                    <li><a href="index2.html"> Rechercher un membre</a></li>
-                    <li><a href="index2.html"> Créer un membres</a></li>
-                    <li><a href="index2.html"> Ajouter un membre</a></li>
-                    <li><a href="index2.html"> Modifier un membres</a></li>
-                    <li><a href="index2.html"> Supprimer un membre</a></li>
+                    <li><a href="index2.html"> <i class="fa fa-search"></i>Rechercher un membre</a></li>
+                    <li><a href="index2.html"> <i class="fa fa-user-plus"></i>Créer un membres</a></li>
+                    <li><a href="index2.html"> <i class="fa fa-pencil-square-o"></i>Modifier un membres</a></li>
+                    <li><a href="index2.html"> <i class="fa fa-user-times"></i>Supprimer un membre</a></li>
                 </ul>                
             </div>
             <!--/.nav-collapse -->
