--- a/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/fragment/aside.html.twig
@@ -60,7 +60,7 @@
                     <span class="label label-success">{{ members |length }}</span>
                 </a>
                 <ul class="treeview-menu">
-                    <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-users"></i> Trombinoscope</a></li>
+                    <li><a href="{{ path('trombinoscope') }}"><i class="fa fa-circle-o"></i> Trombinoscope</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Rechercher un membre</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Créer un membres</a></li>
                     <li><a href="index2.html"><i class="fa fa-circle-o"></i> Ajouter un membre</a></li>
