--- a/src/Kazanac/MembreBundle/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Security/login.html.twig
@@ -1,41 +1,34 @@
-{% extends "KazanacMembreBundle::layout.html.twig" %}
-
-{% block body %}
-    {% if error %}
-        <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
-    {% endif %}
-
-    <form class="form-horizontal" action="{{ path("fos_user_security_check") }}" method="post">
-
-        <div class="form-group">
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-            <label class="col-sm-4  control-label" for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-            <div class="col-sm-6">
-                <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
-            </div>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+    </head>
+    <body>
+ <h1>essaie de surrcharge <h1>
+        <div>
+            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
+                <a href="{{ path('fos_user_security_logout') }}">
+                    {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                </a>
+            {% else %}
+                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+            {% endif %}
         </div>
 
-        <div class="form-group">
-            <label class="col-sm-4 control-label" for="password">{{ 'security.ESSAIE.password'|trans({}, 'FOSUserBundle') }}</label>
-            <div class="col-sm-6">
-                <input type="password" id="password" name="_password" required="required" />
-            </div>
-        </div>
+        {% if app.request.hasPreviousSession %}
+            {% for type, messages in app.session.flashbag.all() %}
+                {% for message in messages %}
+                    <div class="flash-{{ type }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+        {% endif %}
 
-        <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-10">
-                <div class="checkbox">
-                    <label for="remember_me">    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                        {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
-                </div>
-            </div>
+        <div>
+            {% block fos_user_content %}
+            {% endblock fos_user_content %}
         </div>
-        <div class="form-group">
-            <div class="col-sm-offset-4 col-sm-10">
-                <input type="submit" class="btn bg-primary" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-            </div>
-        </div>
-    </form>
-
-{% endblock body %}
+    </body>
+</html>
