--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -1,6 +1,7 @@
-{% extends "KazanacMembreBundle::layout.html.twig" %}
+{% extends 'KazanacMembreBundle::layout.html.twig' %}
 
 {% block body %}
+
     {% if error %}
         <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
     {% endif %}
