--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'KazanacMembreBundle::layout.html.twig' %}
 
 {% block body %}
-
+ <img class="img-responsive"  src="{{ asset('bundles/kazanacmembre/img/logo_Kazanac_2016.png') }}">    
     {% if error %}
         <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
     {% endif %}
@@ -11,14 +11,14 @@
         <div class="form-group">
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-            <label class="col-sm-4  control-label" for="username">{{ 'security.ESSAI.username'|trans({}, 'FOSUserBundle') }}</label>
+            <label class="col-sm-4  control-label" for="username">{{ 'Nom d\'utilisateur'|trans({}, 'FOSUserBundle') }}</label>
             <div class="col-sm-6">
                 <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
             </div>
         </div>
 
         <div class="form-group">
-            <label class="col-sm-4 control-label" for="password">{{ 'security.ESSAIE.password'|trans({}, 'FOSUserBundle') }}</label>
+            <label class="col-sm-4 control-label" for="password">{{ 'Mot de passe'|trans({}, 'FOSUserBundle') }}</label>
             <div class="col-sm-6">
                 <input type="password" id="password" name="_password" required="required" />
             </div>
