--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -1,7 +1,55 @@
 {% extends 'KazanacMembreBundle::layout.html.twig' %}
 
 {% block body %}
- <img class="img-responsive"  src="{{ asset('bundles/kazanacmembre/img/logo_Kazanac_2016.png') }}">    
+
+<div class="wrapper">
+  <div class="container" style="background-color : white;">
+    <div class="row">
+    <div class="col-md-6">
+      <img class="img-responsive" src="/kazanac/web/bundles/kazanacmembre/img/logo_Kazanac_2016.png"> 
+      </div>
+      <div class="col-md-6">
+              
+    
+    <form class="form-horizontal" action="/kazanac/web/app.php/login_check" method="post">
+
+        <div class="form-group">
+                    <input type="hidden" name="_csrf_token" value="MMZtvgXMbz1kXsJfYF50YeclK0xaOcSKffc3dp_oKg0">
+
+            <label class="col-sm-4  control-label" for="username">Nom d'utilisateur</label>
+            <div class="col-sm-6">
+                <input type="text" id="username" name="_username" value="" required="required">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="col-sm-4 control-label" for="password">Mot de passe</label>
+            <div class="col-sm-6">
+                <input type="password" id="password" name="_password" required="required">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-10">
+                <div class="checkbox">
+                    <label for="remember_me">    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
+                        security.login.remember_me</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-10">
+                <input type="submit" class="btn bg-primary" id="_submit" name="_submit" value="security.login.submit">
+            </div>
+        </div>
+    </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+ <!--img class="img-responsive"  src="{{ asset('bundles/kazanacmembre/img/logo_Kazanac_2016.png') }}">    
     {% if error %}
         <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
     {% endif %}
@@ -28,7 +76,7 @@
             <div class="col-sm-offset-4 col-sm-10">
                 <div class="checkbox">
                     <label for="remember_me">    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-                        {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
+                        {{ 'Se souvenir de moi'|trans({}, 'FOSUserBundle') }}</label>
                 </div>
             </div>
         </div>
@@ -37,6 +85,6 @@
                 <input type="submit" class="btn bg-primary" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
             </div>
         </div>
-    </form>
+    </form==>
 
 {% endblock body %}
