suite mise en page login

--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<div class="wrapper">
-  <div class="container" style="background-color : white;">
+<div class="wrapper" style="background-color : white;">
+  <div class="container" style="background-color : white;margin-top: 195px;">
     <div class="row">
     <div class="col-md-6">
       <img class="img-responsive" src="/kazanac/web/bundles/kazanacmembre/img/logo_Kazanac_2016.png"> 
@@ -33,7 +33,7 @@
             <div class="col-sm-offset-4 col-sm-10">
                 <div class="checkbox">
                     <label for="remember_me">    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-                        security.login.remember_me</label>
+                        Connexion</label>
                 </div>
             </div>
         </div>
