suite mise a jour css login page

--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -4,12 +4,11 @@
 
 <div class="wrapper" style="background-color : white;">
   <div class="container" style="background-color : white;margin-top: 195px;">
-    <div class="row">
+    <div class="row" style="border: 22px solid lightgray;border-style: double;border-radius: 100%;padding: 118px;">
     <div class="col-md-6">
       <img class="img-responsive" src="/kazanac/web/bundles/kazanacmembre/img/logo_Kazanac_2016.png"> 
       </div>
-      <div class="col-md-6">
-              
+      <div class="col-md-6" style="margin-top: 13%;">             
     
     <form class="form-horizontal" action="/kazanac/web/app.php/login_check" method="post">
 
@@ -33,13 +32,13 @@
             <div class="col-sm-offset-4 col-sm-10">
                 <div class="checkbox">
                     <label for="remember_me">    <input type="checkbox" id="remember_me" name="_remember_me" value="on">
-                        Connexion</label>
+                        Se souvenir de moi </label>
                 </div>
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-10">
-                <input type="submit" class="btn bg-primary" id="_submit" name="_submit" value="security.login.submit">
+                <input type="submit" class="btn bg-primary" id="_submit" name="_submit" value="Connexion">
             </div>
         </div>
     </form>
