mise a jour login page

--- a/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
+++ b/src/Kazanac/MembreBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
 <div class="wrapper" style="background-color : white;">
   <div class="container" style="background-color : white;margin-top: 195px;">
-    <div class="row" style="border: 22px solid lightgray;border-style: double;border-radius: 100%;padding: 118px;">
+    <div class="row" style="border: 22px solid #fcce05;  border-style: double; border-radius: 100%; padding: 118px; background-color: rgba(0, 182, 240, 0.58);">
     <div class="col-md-6">
       <img class="img-responsive" src="/kazanac/web/bundles/kazanacmembre/img/logo_Kazanac_2016.png"> 
       </div>
